--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -10,6 +10,16 @@ Don't forget you should also pre-register your outlier strategy. See [@leys2019c
 
 * [Leys, C., Delacre, M., Mora, Y. L., Lakens, D., & Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).](https://biblio.ugent.be/publication/8619726/file/8646347.pdf)
 
+Also don't forget to pre-register any analyses involving control variables. Control variables should be pre-registered with very specific predictions. See [@breaugh2008important]  and [@spector2011methodological] for guidance.
+
+* [Breaugh, J. A. (2008). Important considerations in using statistical procedures to control for nuisance variables in non-experimental studies. Human Resource Management Review, 18(4), 282-293.](https://psycnet.apa.org/doi/10.1016/j.hrmr.2008.03.001)
+
+* [Spector, P. E., & Brannick, M. T. (2011). Methodological urban legends: The misuse of statistical control variables. Organizational Research Methods, 14(2), 287-305.](https://doi.org/10.1177%2F1094428110369842)
+
+
+
+
+
 ## Minimizing mistakes
 
 I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021error] to learn how to minimize mistakes in your research. 
@@ -17,6 +27,7 @@ I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021er
 * [Rouder, J. N., Haaf, J. M., & Snyder, H. K. (2019). Minimizing mistakes in psychological science. Advances in Methods and Practices in Psychological Science, 2(1), 3-11.](https://doi.org/10.1177%2F2515245918801915)
 
 * [Strand, J. (2021). Error Tight: Exercises for Lab Groups to Prevent Research Mistakes.](https://psyarxiv.com/rsn5y)
+
 
 
 ## Avoiding *p*-hacking
