--- a/book.bib
+++ b/book.bib
@@ -545,3 +545,24 @@
   year={2005}
 }
 
+@article{breaugh2008important,
+  title={Important considerations in using statistical procedures to control for nuisance variables in non-experimental studies},
+  author={Breaugh, James A},
+  journal={Human Resource Management Review},
+  volume={18},
+  number={4},
+  pages={282--293},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{spector2011methodological,
+  title={Methodological urban legends: The misuse of statistical control variables},
+  author={Spector, Paul E and Brannick, Michael T},
+  journal={Organizational Research Methods},
+  volume={14},
+  number={2},
+  pages={287--305},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
