--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -207,7 +207,7 @@
 
 \title{Welcome!}
 \author{David J. Stanley}
-\date{2021-08-29}
+\date{2021-09-01}
 
 \begin{document}
 \maketitle
@@ -363,7 +363,7 @@ When you first start R, the Console panel is on the left side of the screen. Som
 ## [1] 26
 \end{verbatim}
 
-We can also put the result into a variable to store it. Later we can use the print command to see that result. In the example below we add the numbers 3, 0, and 9 and store the result in the variable my\_sum. The text ``\textless-'' indicate you are putting what is on the right side of the arrow into the variable on the left side of the arrow. You can think of a variable as cup into which you can put different things. In this case, imagine a real-world cup with my\_sum written on the outside and inside the cup we have stored the sum of 3, 0, and 9 (i.e., 12).
+We can also put the result into a variable to store it. Later we can use the print command to see that result. In the example below we add the numbers 3, 0, and 9 and store the result in the variable my\_sum. The text ``\textless-'' indicate you are putting what is on the right side of the arrow into the variable on the left side of the arrow. You can think of a variable as a cup into which you can put different things. In this case, imagine a real-world cup with my\_sum written on the outside and inside the cup we have stored the sum of 3, 0, and 9 (i.e., 12).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -383,13 +383,13 @@ We can inspect the contents of the my\_sum variable (i.e., my\_sum cup) with the
 ## [1] 12
 \end{verbatim}
 
-Variable are very useful in R. We will use them to store a single number, an entire data set,
+Variables are very useful in R. We will use them to store a single number, an entire data set,
 the results of an analysis, or anything else.
 
 \hypertarget{script-panel}{%
 \subsection{Script Panel}\label{script-panel}}
 
-Although you can use R with just with the Console panel, it's a better idea to use scripts via the Script panel - not visible yet. Scripts are just text files with the commands you use stored in them. You can run a script (as you will see below) using the Run or Source buttons located in the top right of the Script panel.
+Although you can use R with just with the Console panel, it's a better idea to use scripts via the Script panel - not visible yet. Scripts are just text files that contain R commands that you run as a batch. You can run a script (as you will see below) using the Run or Source buttons located in the top right of the Script panel.
 
 Scripts are valuable because if you need to run an analysis a second time you don't have to type the command in a second time. You can run the script again and again without retyping your commands. More importantly though, the script provides a record of your analyses.
 
@@ -428,16 +428,16 @@ A good way to start every script is with a comment that includes the date of you
 \end{Highlighting}
 \end{Shaded}
 
-Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it. Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day created by the \href{https://www.iso.org/home.html}{International Organization for Standardization} (ISO). Some people use the mnemonic \emph{You're My Dream} to remember the \textbf{Y}ear \textbf{M}onth \textbf{D}ay order. Wikipedia provides more information about this \href{https://en.wikipedia.org/wiki/ISO_8601}{International Date Format (ISO 8601)}. An \href{https://xkcd.com/1179/}{XKCD} cartoon highlights the ISO date format:
+Moving forward, I suggest you use comments to make your own personal notes in your own code as you write it. Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day created by the \href{https://www.iso.org/home.html}{International Organization for Standardization} (ISO). Some people use the mnemonic \emph{You're My Dream} to remember the \textbf{Y}ear \textbf{M}onth \textbf{D}ay order. Wikipedia provides more information about this \href{https://en.wikipedia.org/wiki/ISO_8601}{International Date Format (ISO 8601)}. An \href{https://xkcd.com/1179/}{XKCD} cartoon highlights the ISO date format:
 
 \includegraphics[width=0.4\linewidth]{ch_introduction/images/iso8601}
 
 \hypertarget{background-about-the-tidyverse}{%
 \subsection{Background about the tidyverse}\label{background-about-the-tidyverse}}
 
-There are generally two broad ways of using R, the older way and the newer way. Using R the older way is referred to as using base R. A more modern approach to using R is the tidyverse\index{tidyverse}. The tidyverse represents a collection of packages the work together to give R a modern workflow. These packages do many things to help the data analyst (loading data, rearranging data, graphing, etc.). We will use the tidyverse approach to R in this guide.
+There are generally two broad ways of using R, the older way and the newer way. Using R the older way is referred to as using base R. A more modern approach to using R is the tidyverse\index{tidyverse}. The tidyverse represents a collection of packages that work together to give R a modern workflow. These packages do many things to help the data analyst (loading data, rearranging data, graphing, etc.). We will use the tidyverse approach to R in this guide.
 
-A noted the tidyverse is a collection of packages. Each package adds new commands to R. The number of packages and correspondingly the number of new commands added to R by the tidyverse is large. Below is a list of the tidyverse packages:
+As noted, the tidyverse is a collection of packages. Each package adds new commands to R. The number of packages and correspondingly the number of new commands added to R by the tidyverse is large. Below is a list of the tidyverse packages:
 
 \begin{verbatim}
 ##  [1] "broom"         "cli"           "crayon"       
@@ -452,7 +452,7 @@ A noted the tidyverse is a collection of packages. Each package adds new command
 ## [28] "tidyr"         "xml2"          "tidyverse"
 \end{verbatim}
 
-Before you can use a package it needs to be installed -- this is the same as downloading an app from the App Store. Normally, you can install a \textbf{single} packages with the install.packages command. Previously, you needed run an install.package command for every package in the tidyverse as illustrated below (though we no longer use this approach).
+Before you can use a package it needs to be installed -- this is the same as downloading an app from the App Store. Normally, you can install a \textbf{single} package with the install.packages command. Previously, you needed to run an install.package command for every package in the tidyverse as illustrated below (though we no longer use this approach).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -466,7 +466,7 @@ Before you can use a package it needs to be installed -- this is the same as dow
 \end{Highlighting}
 \end{Shaded}
 
-Fortunately, the tidyverse packages can now by installed with a single install.packages command. Specifically, the install.packages command below will install all of the packages listed above.
+Fortunately, the tidyverse packages can now be installed with a single install.packages command. Specifically, the install.packages command below will install all of the packages listed above.
 
 \textbf{Class note: For the ``First Lab'', I've done the install.packages for you. So there is no need to use the install.packages command below in this first lab.}
 
@@ -492,7 +492,7 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \hypertarget{activate-tidyverse-auto-complete-for-your-script}{%
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
-Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
+Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following in the Console panel:
 
 \begin{verbatim}
 ## -- Attaching packages ------------------- tidyverse 1.3.1 --
@@ -523,11 +523,11 @@ Most importantly, running the library(tidyverse) prior to entering the rest of y
 \hypertarget{use-read_csv-not-read.csv-to-open-files.}{%
 \subsection{Use read\_csv (not read.csv) to open files.}\label{use-read_csv-not-read.csv-to-open-files.}}
 
-If you inspect the Files pane on the right of the screen you see the \textbf{data\_okcupid.csv} data file in our project directory. We will load this data with the commands below. If you followed the steps above, you should have auto-complete for the tidyverse commands you type for now in -- in the current R session. Enter the command below into your script. As your start to type read\_csv you will likely be presented with an auto-complete option. You can use the arrow keys to move up and down the list of options to select the one you want - then press tab to select it.
+If you inspect the Files pane on the right of the screen you see the \textbf{data\_okcupid.csv} data file in our project directory. We will load this data with the commands below. If you followed the steps above, you should have auto-complete for the tidyverse commands you type from now on -- in the current R session. Enter the command below into your script. As your start to type read\_csv you will likely be presented with an auto-complete option. You can use the arrow keys to move up and down the list of options to select the one you want - then press tab to select it.
 
 Once your command looks like the one below select the text and click on the ``Run'' button.
 
-Note: If you are not in the class, the data file is available from: \url{https://github.com/dstanley4/psyc6060bookdown}
+Note: If you are not in the class, the data file is available here: \url{data_okcupid.csv}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -570,8 +570,8 @@ You can inspect your data in a spreadsheet view by using the view command. Do NO
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{print-see-you-data-in-the-console}{%
-\subsection{print(): See you data in the Console}\label{print-see-you-data-in-the-console}}
+\hypertarget{print-see-your-data-in-the-console}{%
+\subsection{print(): See your data in the Console}\label{print-see-your-data-in-the-console}}
 
 You can inspect the first few rows of your data with the print() command. It is OK to add a print command to your script. Try the print() command below in the Console:
 
@@ -681,9 +681,9 @@ You can be even more specific and indicate you only want the last three row of y
 \hypertarget{summary-quick-summaries}{%
 \subsection{summary(): Quick summaries}\label{summary-quick-summaries}}
 
-You can a short summary of your data with the summary() command. Note that we will use the summary() command in many places in the guide. The output of the summary() command changes depending on what you give it - that is put inside the brackets. You can give the summary() command many things such as data, the results of a regression analysis, etc.
+You can create a short summary of your data with the summary() command. Note that we will use the summary() command in many places in the guide. The output of the summary() command changes depending on what you give it - that is put inside the brackets. You can give the summary() command many things such as data, the results of a regression analysis, etc.
 
-Try the command below in the Console. You will see that summary() give the mean and median for each of the numeric variables (age and height).
+Try the command below in the Console. You will see that summary() gives the mean and median for each of the numeric variables (age and height).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -755,7 +755,7 @@ Source (without Echo) is not designed for the typical analysis workflow. It is m
 
 The Source with Echo command runs all of the contents of a script and presents the output in the R console. This is the approach you should use to running your scripts in most cases.
 
-Prior to running Source with Echo (or just Source), it's always a good idea to restart R. This makes sure you clear the computer memory of any errors from any previous runs.
+Prior to running Source with Echo (or just Source), it's always a good idea do do two things: 1) Save your script. 2) Use the menu item: \emph{Session \textgreater{} Restart R}. This makes sure you clear the computer memory of any errors from any previous runs.
 
 So you should do the following EVERY time you run your script.
 
@@ -763,12 +763,14 @@ So you should do the following EVERY time you run your script.
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
+  Save your script
+\item
   Use the menu item: \textbf{Session \textgreater{} Restart R}
 \item
   Click the down arrow beside the Source button, and click on Source With Echo
 \end{enumerate}
 
-This will clear potentially problematic previous stats, run the script commands, and display the output in the Console. Moving forward we will use this approach for running scripts. Once you have used Source with Echo once, you can just click the Source button and it will use Source with Echo automatically (without the need to use the pull down option for selecting Source with Echo).
+This will clear potentially problematic previous stats and variables from memory, run the script commands, and display the output in the Console. Moving forward we will use this approach for running scripts. Once you have used Source with Echo once, you can just click the Source button and it will use Source with Echo automatically (without the need to use the pull down option for selecting Source with Echo).
 
 \begin{rmdcaution}
 Using Restart R before you run a script, or R code in general, is a critical workflow tip.
@@ -1036,7 +1038,7 @@ You can access an item in a list by its label/name using the dollar sign:
 \hypertarget{revisiting-read_csv}{%
 \section{Revisiting read\_csv()}\label{revisiting-read_csv}}
 
-In the text above we learned about vectors of characters. This information can be used handle missing values in the read\_csv() command. Consider a data set where for many participants we did not get a response to a question. We might have that represented in various ways within the data file. The value for that question might simply be omitted (i.e., represented by nothing -- ""), represented by NA for not available, or maybe simply be something like -777.
+In the text above we learned about vectors of characters. This information can be used to handle missing values in the read\_csv() command. Consider a data set where for many participants we did not get a response to a question. We might have that represented in various ways within the data file. The value for that question might simply be omitted (i.e., represented by nothing -- ""), represented by NA for not available, or maybe simply be something like -777.
 
 When we load data with read\_csv() we can indicate to the computer how missing values are represented. This ensures the computer sees something like -777 as a missing value rather than an actual value. We do so in the read\_csv() command below using the \textbf{na} argument (not available). Note: use SHIFT-RETURN or SHIFT-ENTER to move the next line within the read\_csv() command. Failure to indicate the missing value codes within read\_csv() will result in incorrect answers in most scenarios with missing data.
 
@@ -3385,7 +3387,7 @@ Likewise, the concise version of the notation can be used to indicate how an ave
 \end{aligned} 
 \]
 
-\textbf{Calculating squared differences}.A common task in statistics is to calculate 1) the squared difference between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
+\textbf{Calculating squared differences}. A common task in statistics is to calculate 1) the squared difference between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
 
 \[
 \begin{aligned} 
@@ -3496,7 +3498,7 @@ The mean/average of the population, \(\mu = 10\), is a parameter that serves as 
 
 Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented, at the population level, by the symbol \(\sigma^2\); a different notation is used at the sample level.
 
-Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point represented by \(X_1\)), the difference between the cookie from the model is -2 (i.e., error):
+Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point represented by \(X_1\)), the difference between the cookie from the model is -2 (i.e., error):
 
 \[
 \begin{aligned} 
@@ -3506,11 +3508,11 @@ X_1 &= 10 + (-2) \\
 
 We want a number that indicates the quality of the cookie model. Specifically, we want a single number that indexes overall how the data (i.e., cookie weights) differ from the model (i.e., the mean cookie). We refer to that index as variance (\(\sigma^2\)).
 
-\textbf{Calculating Squared Errors.} To calculate variance (\(\sigma^2\)), we use the errors for the cookies -- how the cookies differ from the mean/model. The first step is to square the errors/differnces. Those squared numbers are referred to as the ``squared differences'' or ``squared errors''. The calculation of the squared error for each cookie weight is shown below. The squared errors (or squared differences) are 4, 0, and 4.
+\textbf{Calculating Squared Errors.} To calculate variance (\(\sigma^2\)), we use the errors for the cookies -- how the cookies differ from the mean/model. The first step is to square the errors/differences Those squared numbers are referred to as the ``squared differences'' or ``squared errors''. The calculation of the squared error for each cookie weight is shown below. The squared errors (or squared differences) are 4, 0, and 4.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
-Cookie Weight & Model & Squared Difference \\
+Cookie Weight & Model & Squared Difference/Error \\
 \midrule
 \endhead
 \(X_1 = 8\) & \(\mu = 10\) & \((X_1 - \mu)^2 =(8 - 10)^2= 4\) \\
@@ -3548,14 +3550,14 @@ The resulting variance is 2.67 grams\(^2\). The cookie weights were measured in 
 \end{aligned} 
 \]
 
-It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just use the difference (e.g., \((8 - 10) = -2\)) when calculating variance? Why not use the absolute difference (e.g., \(|8 - 10|= 2\)) when calculating variance? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use squared errors it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex mathematical reasons, we use squared errors when calculating the fit (or lack of fit) of a model.
+It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just use the difference (e.g., \((8 - 10) = -2\)) when calculating variance? Why not use the absolute difference (e.g., \(|8 - 10|= 2\)) when calculating variance? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use squared errors it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex mathematical reasons, we use squared errors, (rather than just errors) when calculating the fit (or lack of fit) of a model.
 
 \textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In the cookie case, if the variance was zero, that would indicate that all the cookies had the same weight as the model, exactly 10 grams. To the extent that the variance is larger than zero it implies the data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger variance indicates larger differences among the observations (e.g., cookie weights). That is, when the variance is small, cookie weights tend to be similar to the model -- and each other. In contrast, when the variance is large, cookie weights tend to be different from the model -- and each other.
 
 \hypertarget{standard-deviation-sigma}{%
 \subsection{\texorpdfstring{Standard Deviation (\(\sigma\))}{Standard Deviation (\textbackslash sigma)}}\label{standard-deviation-sigma}}
 
-An alternative index for how data differ from the mean/model is the standard deviation. To understand standard deviation you have to understand varince. Variance is a single number that indexes how data differ from a model. The interpretation of variance is straight forward. It is the average of the squared differences between the data and the model.
+An alternative index for how data differ from the mean/model is the standard deviation. To understand standard deviation you have to understand varince. Variance is a single number that indexes how data differ from a model. The interpretation of variance is straight forward. It is the average of the squared differences/errors between the data and the model.
 
 Standard deviation is represented by the symbol \(\sigma\) and can be calculated as the square root of variance as in Formula \eqref{eq:popsdch4} below.
 
@@ -3598,7 +3600,7 @@ Overall, the rules for interpreting standard deviation are similar to those for 
 \hypertarget{visualizing-populations}{%
 \section{Visualizing populations}\label{visualizing-populations}}
 
-Populations are typically quite large in nature and it's often imposssible to pratically list all of the members of the population. Consequently, it helps to have ways to visual the entire population. In Figure \ref{fig:popvisual3} we present three ways of visualizing a population. In all three graphs (A, B, C) in this figure the x-axis represents heights in centimeter and the y-axis is used to indicate which values on the x-axis are more common. In Figure \ref{fig:popvisual3}A we use a large number of X's to indicate the members of the population. Because X's are also used in formulas to represent individual participants a strength of this graph is that it reminds you that it is a graph reflecting a large number of individuals. In Figure \ref{fig:popvisual3}B we present a standard histogram that illustrate the distribution of heights. In Figure \ref{fig:popvisual3}C we present a density curve that illustrate the distribution of heights. All three approaches are useful for illustrating that most people have heights around 170 cm.
+Populations are typically quite large in nature and it's often imposssible to pratically list all of the members of the population. Consequently, it helps to have ways to visual the entire population. In Figure \ref{fig:popvisual3} we present three ways of visualizing a population. In all three graphs (A, B, C) in this figure the x-axis represents heights in centimeter and the y-axis is used to indicate which values on the x-axis are more common. In Figure \ref{fig:popvisual3}A we use a large number of X's to indicate the members of the population. Because X's are also used in formulas to represent individual participants, a strength of this graph is that it reminds you that it is a graph reflecting a large number of individuals. In Figure \ref{fig:popvisual3}B we present a standard histogram that illustrate the distribution of heights. In Figure \ref{fig:popvisual3}C we present a density curve that illustrate the distribution of heights. All three approaches are useful for illustrating that most people have heights around 170 cm.
 
 \begin{figure}
 \includegraphics[width=0.8\linewidth,height=0.8\textheight]{ch_populations/images/popvisual} \caption{Three ways of visualizing a population distribution}\label{fig:popvisual3}
@@ -6156,9 +6158,11 @@ We used a number of response options to indicate Year of Birth. We entered them 
 \hypertarget{sex-3-points}{%
 \paragraph{Sex 3 points}\label{sex-3-points}}
 
+Please note that in psychology we distinguish between sex and gender. We use the term ``sex'' to refer to underlying biology. In contrast, we use the term ``gender'' to refer a psychological construct (i.e., gender identity). A person's sex and gender may be quite different. Depending on the theory used in a study, you might be interested in sex or gender or both. In this example, we are using sex but not gender. If you were asking about gender - you would have a much longer (and quite different) list of options.
+
 \textbf{Entered in the response\_option column as below. Each option separated by a semicolon.}
 
-males; female; intersex
+male; female; intersex
 
 \hypertarget{commitment-7-points}{%
 \paragraph{Commitment 7 points}\label{commitment-7-points}}
@@ -12640,6 +12644,15 @@ Don't forget you should also pre-register your outlier strategy. See \citep{leys
 \tightlist
 \item
   \href{https://biblio.ugent.be/publication/8619726/file/8646347.pdf}{Leys, C., Delacre, M., Mora, Y. L., Lakens, D., \& Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).}
+\end{itemize}
+
+Also don't forget to pre-register any analyses involving control variables. Control variables should be pre-registered with very specific predictions. See \citep{breaugh2008important} and \citep{spector2011methodological} for guidance.
+
+\begin{itemize}
+\item
+  \href{https://psycnet.apa.org/doi/10.1016/j.hrmr.2008.03.001}{Breaugh, J. A. (2008). Important considerations in using statistical procedures to control for nuisance variables in non-experimental studies. Human Resource Management Review, 18(4), 282-293.}
+\item
+  \href{https://doi.org/10.1177\%2F1094428110369842}{Spector, P. E., \& Brannick, M. T. (2011). Methodological urban legends: The misuse of statistical control variables. Organizational Research Methods, 14(2), 287-305.}
 \end{itemize}
 
 \hypertarget{minimizing-mistakes}{%
